# lerobot-lekiwi-labs

./: .gitignore  .gitmodules  README.md  pyproject.toml
cameras/: README.md  __init__.py  duy0cay_opencv.py  grayscale_opencv.py  imx219_single_cam.py  imx219_stereo_cam.py  test_grayscale_opencv.py
configs/: lekiwi_cameras.yaml  lekiwi_client.yaml  lekiwi_follower.yaml  lekiwi_host.yaml  lekiwi_leader.yaml  lekiwi_record.yaml  lekiwi_robot.yaml  lekiwi_streaming.yaml  lekiwi_teleop.yaml
examples/: README.md
examples/cameras/: imu_testing.py  video_streaming.py  videos_streaming.py
examples/configs/: cameras_config.yaml  lekiwi.yaml  lekiwi_client.yaml  lekiwi_host.yaml  lekiwi_record.yaml  lekiwi_teleop.yaml  robot_config.yaml  robot_configs.yaml  uarm_leader.yaml  uarm_leader_config.yaml  video_streaming.yaml
motors/zhongli/: README.md  __init__.py  zhongli.py
scripts/: lekiwi_calibrate.py  lekiwi_cameras.yaml  lekiwi_find_cameras.py  lekiwi_host.py  lekiwi_host.yaml  lekiwi_record.py  lekiwi_robot.yaml  lekiwi_set_power_on_release.py  lekiwi_teleop.yaml  lekiwi_teleoperate.py  lekiwi_videos_streaming.py
teleoperates/gamepad/: connect_to_dunefox.py  find_gamepad.py  gamepad_control_so101_in_mujoco.md  gamepad_teleop_debug.md  map.md  mujoco_teleop.py  parse_gamepad_data.py  teleoperate.py
teleoperates/keyboard/: README.md  __init__.py  teleop_keyboard.py
teleoperates/uarm-leader-config1/: config_uarm_leader_config1.py  lekiwi_teleoperate_local_to_local.py  teleop_so_follower_with_uarm_leader_config1.py  uarm_leader_config1.py
teleoperates/uarm-leader-config2/: Zhongli_commands_table.csv  config_uarm_leader_config2.py  teleop_so_follower_with_uarm_leader_config2.py
teleoperates/uarm_leader_config1/: README.md  __init__.py  uarm_leader_config1.py
test/: test_grayscale_opencv.py
