[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lekiwi_labs"
version = "0.1.0"
description = "LeKiwi Labs: Experimental modules, scripts and configurations for LeKiwi robot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "picamera2; platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 'armv7l'",
]

[project.optional-dependencies]
imu = [
    "icm20948",
    "smbus2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cameras*", "motors*", "teleoperates*"]
